--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
-    "svg": "node build",
+    "svg": "babel-node build",
     "test": "NODE_ENV=production mocha './tests/**/*.spec.js' --compilers js:babel-core/register",
     "clean": "rimraf dist",
-    "start": "node devServer.js",
+    "start": "nodemon --exec babel-node devServer.js",
     "tunnel": "browser-sync start --proxy localhost:7770 --tunnel wesbos",
     "jsx": "jsx -x jsx client/src ."
   },
@@ -56,9 +56,11 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.10.1",
     "expect": "^1.18.0",
     "expect-jsx": "^2.5.1",
     "mocha": "^2.4.5",
+    "nodemon": "^1.9.2",
     "react-addons-test-utils": "^15.0.2"
   }
 }
