--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "homepage": "https://github.com/wesbos/Learn-Redux",
   "dependencies": {
+    "autoprefixer-stylus": "^0.9.4",
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
@@ -56,11 +57,13 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.7",
     "babel-cli": "^6.10.1",
     "expect": "^1.18.0",
     "expect-jsx": "^2.5.1",
     "mocha": "^2.4.5",
     "nodemon": "^1.9.2",
+    "poststylus": "^0.2.3",
     "react-addons-test-utils": "^15.0.2"
   }
 }
