ES6 component refactor done

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "devDependencies": {
     "autoprefixer": "^6.3.7",
     "babel-cli": "^6.10.1",
+    "babel-preset-stage-0": "^6.5.0",
     "expect": "^1.18.0",
     "expect-jsx": "^2.5.1",
     "html-webpack-plugin": "^2.22.0",
